--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.posts-container {
+		@apply grid grid-cols-3 gap-10;
+	}
+
+	.post-button {
+		@apply rounded-md px-6 py-1 cursor-pointer  transition-colors duration-150 font-medium;
+	}
+
+	.form-input {
+		@apply border-2 py-1 px-2 rounded-md mb-4 outline-none;
+	}
+}
